--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
        
         <link rel="stylesheet" href="all.min.css">
         <title>Coffee Corner</title>
-        <link rel="icon" href="images/coffee-beans.png" type="image/x-icon">
+        <link rel="icon" href="images/coffee-beans.png" type="image/png">
+
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -451,4 +452,5 @@ I highly recommend it for anyone who truly appreciates a great cup of coffee."</
 
         <script src="bootstrap.bundle.js"></script>
     </body>
+
 </html>
