--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="nav-link px-4 fs-6" href="#About Us">About Us </a>
         <a class="nav-link px-4 fs-6" href="#Menu">Menu</a>
         <a class="nav-link px-4 fs-6" href="#Reviews">Review</a>
-        <a class="nav-link px-4 fs-6" href="#">Contact</a>
+        <a class="nav-link px-4 fs-6" href="#contact">Contact</a>
         
       </div>
     </div>
@@ -454,3 +454,4 @@ I highly recommend it for anyone who truly appreciates a great cup of coffee."</
     </body>
 
 </html>
+
