--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ I highly recommend it for anyone who truly appreciates a great cup of coffee."</
     </div>
   </div>
 </section> 
-<section id="contact  position-relative">
+<section id="Contact">
 <div class="container mt-5 py-5">
     <div class="row ">
         <div class="col-md-6 col-12">
@@ -454,5 +454,6 @@ I highly recommend it for anyone who truly appreciates a great cup of coffee."</
     </body>
 
 </html>
+
 
 
